fix: reducing sidebar z-index

--- a/src/rocm_docs/rocm_docs_theme/static/custom.css
+++ b/src/rocm_docs/rocm_docs_theme/static/custom.css
@@ -221,7 +221,7 @@ a#ot-sdk-btn {
 }
 
 .bd-sidebar-secondary {
-  z-index: 10001;
+  z-index: 2000;
 }
 
 .sd-card-body.rocm-card-banner {
